# certbot-dns-hostinger

./: .coveragerc  .gitignore  README.md  RELEASE.md  credentials.ini.example  pyproject.toml
.github/workflows/: create-release-tag.yml  publish.yml  tests.yml
certbot_dns_hostinger/: __init__.py
certbot_dns_hostinger/_internal/: __init__.py  dns_hostinger.py
docs/: index.md
scripts/: release_orchestrator.sh
tests/: README.md  conftest.py  test_authenticator.py  test_dns_hostinger.py  test_hostinger_client.py  test_integration.py  test_root_domain.py
