[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-hostinger"
dynamic = ["version", "dependencies"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ICN", "Q", "SIM", "TID", "TCH", "ARG", "PIE", "PYI", "PT", "LOG", "RET", "SLF", "SLOT", "TRY", "NPY", "AIR", "PERF", "FURB", "RUF"]
ignore = ["E501", "B008", "C901", "M001"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
